<resources>

    <!-- Controls Activity -->
    <string name="app_name">AudioIR</string>
    <string name="action_settings">Settings</string>
    <string name="VolUP">Vol+</string>
    <string name="VolDN">Vol-</string>
    <string name="input">Input</string>
    <string name="power">Power</string>
    <string name="labelCurrentRemote">Current Remote:   </string>
    <string name="nullRemote">N/A</string>
    <string name="title_activity_settings">Settings</string>

    <!-- OldRemoteList Activity -->
    <string name="title_activity_old_remote_list">Remote List</string>
    <string name="add_remote">Add new remote</string>

    <!-- Remote titles -->
    <string name="remotetitle_sanyo1">Sanyo TV</string>
    <string name="remotetitle_sony1">Sony Speakers</string>

    <!-- AddRemote Activity -->
    <string name="title_activity_add_remote">AddRemote</string>
    <string name="nameHint">Remote Name</string>
    <string name="codesHint">Enter Codes&#8230;</string>

    <!-- CodeList Activity -->
    <string name="title_activity_code_list">Code List</string>
    <string name="add_code">Add Code</string>

    <!-- Code names -->
    <string name="codename_power">Power</string>
    <string name="codename_input">Input</string>

    <!-- AddCodes activity -->
    <string name="title_activity_add_codes">AddCodes</string>
    <string name="newcode">New Code</string>
    <string name="name">Name</string>
    <string name="hexhere">Type or Paste ProntoHex Here</string>
    <string name="remoteName">Adding code for remote</string>

    <!-- EditCode Activity -->
    <string name="title_activity_edit_code">EditCode</string>

    <!-- Proper RemoteList Activity -->
    <string name="title_activity_remote_list">RemoteList</string>


    <!-- Example Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
